-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.1, 6.9.0 Beta2
-
Raspberry Pi 4
-
-
79e016539 (dev), d1ecd755f (6.9), bd0137c09 (6.8)
-
Multimedia wk 7-8, Multimedia, weeks 9-10, Multimedia, weeks 11-12, Multimedia, weeks 13-14
After finishing playing a video, and moving back to another view, the application freezes while printing the following error:
Could not finish change state of "playbin" ASYNC PAUSED PAUSED
Steps to reproduce:
- Use the attached reproduction project.
- Copy in a .mp4 into the project: /root/Files/
- Run the project
- Open the video (so it starts playing) by pressing the thumbnail
- Wait for the video to finish playing
- Press the "back" button (on the top left)
- Observe application freezing, and observe the error.
Notes:
- This does not always happen. You might have to try a couple of times
- This ONLY happens when the video completely finishes playing or when you pause the video and then press the back button. It DOES work correctly when the video is still playing.
- We also tried with the ffmpeg backend, and observe no problems there. But ffmpeg is no option for us.
- relates to
-
QTBUG-129764 QML MediaPlayer shows black screen after seeking when paused and after playing to end of stream
-
- Closed
-
-
QTBUG-132478 Memory leak in video playback
-
- Closed
-
-
QTBUG-135155 [Boot2Qt] The app freezes while switching audio outputs after suspending the playback
-
- Reported
-
| For Gerrit Dashboard: QTBUG-133135 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 624523,4 | Fix freeze in GStreamerMediaPlayer when destroying QMediaPlayer | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 633205,3 | Fix freeze in GStreamerMediaPlayer when destroying QMediaPlayer | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 633782,2 | Fix freeze in GStreamerMediaPlayer when destroying QMediaPlayer | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |