src/plugins/multimedia/gstreamer/common/qgstreamermediaplayer.cpp
@@ -972,7 +972,8 @@ void QGstreamerMediaPlayer::setAudioOutput(QPlatformAudioOutput *output)
 
     // FIXME: we need to have a gst_play API to change the sinks on the fly.
     // finishStateChange a hack to avoid assertion failures in gstreamer
-    m_playbin.finishStateChange();
+    if (!qmediaplayerDestructorCalled)
+        m_playbin.finishStateChange();
 }
 
 QMediaMetaData QGstreamerMediaPlayer::metaData() const
